examples/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveapp
  labels:
    app: liveapp
  namespace: liveapp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: liveapp
  template:
    metadata:
      labels:
        app: liveapp
    spec:
      containers:
        - name: liveapp
          image: maitrungduc1410/socketio:app
          imagePullPolicy: Always # Since we reuse tags, we should always pull
          ports:
            - containerPort: 3000
              name: http
          # resources:
          #   requests:
          #     cpu: "128m"
          #     memory: "256Mi"
          #   limits:
          #     cpu: "1"
          #     memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: liveapp
  namespace: liveapp
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: liveapp
